<resources>
    <string name="app_name">Somar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtUm">Número 1</string>
    <string name="txtDois">Número 2</string>
    <string name="cpUm" />
    <string name="cpDois" />
    <string name="btnUm">Somar</string>
    <string name="txtTres">Resultado</string>
    <string name="txtQuatro" />
</resources>
