<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SomarDoisNumeros"
    android:id="@+id/somar">

    <TextView android:text="@string/txtUm" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUm" />

    <TextView
        android:text="@string/txtDois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDois"
        android:layout_below="@+id/cpUm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cpUm"
        android:text="@string/cpUm"
        android:layout_below="@+id/txtUm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cpDois"
        android:text="@string/cpDois"
        android:layout_below="@+id/txtDois"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/cpUm"
        android:layout_alignEnd="@+id/cpUm" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUm"
        android:id="@+id/btnUm"
        android:layout_below="@+id/cpDois"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Somar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTres"
        android:id="@+id/txtTres"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtQuatro"
        android:id="@+id/txtQuatro"
        android:layout_below="@+id/txtTres"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:layout_alignRight="@+id/btnUm"
        android:layout_alignEnd="@+id/btnUm" />

</RelativeLayout>
